<resources>
    <string name="app_name">WanAndroid</string>

    <string name="home">首页</string>
    <string name="knowledge">知识体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_collection">收藏</string>
    <string name="menu_todo">TODO</string>
    <string name="menu_night_mode">夜间模式</string>
    <string name="menu_daytime_mode">日间模式</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于我们</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
