<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_collection"
                android:icon="@drawable/icon_collection"
                android:title="@string/menu_collection"/>
        <item
                android:id="@+id/nav_todo"
                android:icon="@drawable/icon_todo"
                android:title="@string/menu_todo"/>
        <item
                android:id="@+id/nav_mode_switch"
                android:icon="@drawable/icon_night_mode"
                android:title="@string/menu_night_mode"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/icon_settings"
                android:title="@string/menu_settings"/>

        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/icon_about"
                android:title="@string/menu_about"/>
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>-->

</menu>
